--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,4 @@
-.App {
-  text-align: center;
-}
+
 
 .App-logo {
   height: 40vmin;
@@ -24,10 +22,6 @@
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +29,9 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.test {
+  background-color: #82b6e9;
+  cursor: pointer;
 }
