--- a/src/App.css
+++ b/src/App.css
@@ -35,3 +35,22 @@
   background-color: #999999;
   cursor: pointer;
 }
+.weather-container{
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  padding-top: 40px;   /* 10 * 4px = 40px */
+  padding-bottom: 64px; /* 16 * 4px = 64px */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px; /* 9 * 4px = 36px */
+  padding-left: 8px;  /* 2 * 4px = 8px */
+  padding-right: 8px; 
+}
+@media (min-width: 768px) {
+  .weather-container {
+      flex-direction: row;
+  }
+}
